<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:id="@+id/fragment2">

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Activity 2"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bnToFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to Activity 1"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text2"/>

    <Button
        android:id="@+id/bnToThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to Activity 3"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/bnToFirst"/>

</androidx.constraintlayout.widget.ConstraintLayout>