<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainFragment"
    android:id="@+id/fragment1">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Activity 1"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bnToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to Activity 2"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/text1"/>
</androidx.constraintlayout.widget.ConstraintLayout>